color and image again pls

--- a/css/styles.css
+++ b/css/styles.css
@@ -11389,7 +11389,7 @@ p {
   #mainNav.navbar-shrink {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: #212529;
+    background-color: #FFC0CB;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
@@ -11719,7 +11719,7 @@ header.masthead .masthead-heading {
 }
 
 section#contact {
-  background-color: #212529;
+  background-color:#FFC0CB;
   background-image: url("../assets/img/map-image.png");
   background-repeat: no-repeat;
   background-position: center;
