--- a/css/styles.css
+++ b/css/styles.css
@@ -11535,6 +11535,12 @@ header.masthead .masthead-heading {
 }
 end of edit*/ 
 
+/*changing for popup*/ 
+.popup-modal .modal-dialog {
+  margin: 20rem;
+  max-width: 100vw;
+}
+
 .portfolio-modal .modal-dialog {
   margin: 5rem;
   max-width: 100vw;
