--- a/css/styles.css
+++ b/css/styles.css
@@ -6942,6 +6942,10 @@ textarea.form-control-lg {
   border-width: 5px !important;
 }
 
+.border-50 {
+  border-width: 50px !important;
+}
+
 .w-25 {
   width: 25% !important;
 }
