--- a/css/styles.css
+++ b/css/styles.css
@@ -11541,19 +11541,23 @@ end of edit*/
 
 /*changing for popup*/ 
 .popup-modal .modal-dialog {
-  margin: 12rem;
+  margin: 10rem;
   max-width: 100vw;
 }
 .popup-modal .close-modal {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
-  width: 2rem;
-  height: 2rem;
+  top:1.5rem;
+  right: 1.5rem;
+  width: 3rem;
+  height: 3rem;
   cursor: pointer;
   background-color: transparent;
 }
-
+.popup-modal .modal-content {
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+  text-align: center;
+}
 .portfolio-modal .modal-dialog {
   margin: 5rem;
   max-width: 100vw;
